tests/bad/arith_binop_not_num.ae
/// fail: Operator requires numeric types

def main() {
    let x = true + 5
}